# cs1100-calculator

./: .gitignore  README.md  calculator
.github/checker/: makefile  meson.build
.github/checker/tests/: test_1.c  test_2.c  test_3.c  test_4.c  test_5.c
.github/workflows/: classroom.yml
src/: calculator.c  calculator.h  main.c
